workspace(name = "kdma")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#################################################################################
# rules_python: Bazel Python Rules
#################################################################################
# NOTE: Keep this back behind 0.26.0 because in that version some dependencies (notably
# ouster-sdk) trigger the python pep440 incompatible version error:
# https://github.com/pypa/setuptools/issues/3772
http_archive(
    name = "rules_python",
    sha256 = "9d04041ac92a0985e344235f5d946f71ac543f1b1565f2cdbc9a2aaee8adf55b",
    strip_prefix = "rules_python-0.26.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.26.0/rules_python-0.26.0.tar.gz",
)

# The InvalidVersion exception is not present with rules_python 0.25.0.
#http_archive(
#    name = "rules_python",
#    sha256 = "5868e73107a8e85d8f323806e60cad7283f34b32163ea6ff1020cf27abef6036",
#    strip_prefix = "rules_python-0.25.0",
#    url = "https://github.com/bazelbuild/rules_python/releases/download/0.25.0/rules_python-0.25.0.tar.gz",
#)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

# NOTE: We name this python_3_10_6 because this name is required for rules_ros2 below. We also
# just go ahead and use this toolchain for all python targets.
python_register_toolchains(
    name = "python_3_10_6",
    python_version = "3.10.6",
)

load("@python_3_10_6//:defs.bzl", python_interpreter_target = "interpreter")

#################################################################################
# Python pip dependencies
#################################################################################
# buildifier: disable=out-of-order-load
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    python_interpreter_target = python_interpreter_target,
    requirements_lock = "//:requirements_lock.txt",
)

load(
    "@pip_deps//:requirements.bzl",
    install_pip_deps = "install_deps",
)

install_pip_deps()
